--- a/search/templates/search/index_view.htm
+++ b/search/templates/search/index_view.htm
@@ -33,8 +33,14 @@
     <div role="main" class="container" style="margin-top: 80px;">
 
         <div>
-            <h1>Demo</h1>
-            <p class="lead">How to call APIs from HTML</p>
+            <!--dashboard header-->
+    <div class="row">
+
+        <div class="card card-header ">
+            <h3 id="dm_header">Traffic Rule Violation Analysis Dashboard</h3>
+
+
+        </div>
             <br>
            
 
@@ -57,6 +63,213 @@
 
 
         </div>
+
+
+
+        <!--highchart link-->
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+<br>
+<div class="container-fluid">
+    
+
+    </div>
+
+    <br>
+    <!--section 1-->
+    <!--total-->
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="card text-center text-black  mb-3" id="total-orders">
+                    <div class="card-header">
+                        <h5 class="card-title">Total fine this year</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">1500</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card text-center text-black  mb-3" id="total-orders">
+                    <div class="card-header">
+                        <h5 class="card-title">Total fine Today</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">15</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <!--section 2-->
+    <div class="row">
+        <div class="col-6">
+            <div class="card text-center text-black  mb-3" id="total-orders">
+                <div class="card-body">
+                    <figure class="highcharts-figure">
+                        <div id="container"></div>
+                    </figure>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card text-center text-black  mb-3" id="total-orders">
+                <div class="card-body">
+                    <figure class="highcharts-figure">
+                        <div id="container1"></div>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<script>
+    //barchart
+    Highcharts.chart('container', {
+        chart: {
+            type: 'column'
+        },
+        title: {
+            text: 'Monthly total fine in 2022'
+        },
+        /*subtitle: {
+            text: 'Source: <a href="http://en.wikipedia.org/wiki/List_of_cities_proper_by_population">Wikipedia</a>'
+        },*/
+        xAxis: {
+            type: 'category',
+            labels: {
+                rotation: -45,
+                style: {
+                    fontSize: '13px',
+                    fontFamily: 'Verdana, sans-serif'
+                }
+            }
+        },
+        yAxis: {
+            min: 0,
+            title: {
+                text: 'Number of fine'
+            }
+        },
+        legend: {
+            enabled: false
+        },
+        tooltip: {
+            pointFormat: 'fine : <b>{point.y:.1f} </b>'
+        },
+        series: [{
+            name: 'Population',
+            data: [
+                ['January', 242],
+                ['February', 208],
+                ['March', 149],
+                ['April', 137],
+                ['May', 131],
+                ['June', 127],
+                ['July', 124],
+                ['August', 122],
+                ['September', 120],
+                ['October', 117],
+                ['November', 115],
+                ['December', 112],
+            ],
+            dataLabels: {
+                enabled: true,
+                rotation: -90,
+                color: '#FFFFFF',
+                align: 'right',
+                format: '{point.y}', // one decimal
+                y: 10, // 10 pixels down from the top
+                style: {
+                    fontSize: '13px',
+                    fontFamily: 'Verdana, sans-serif'
+                }
+            }
+        }]
+    });
+
+    //pie chart
+    // Radialize the colors
+    Highcharts.setOptions({
+        colors: Highcharts.map(Highcharts.getOptions().colors, function(color) {
+            return {
+                radialGradient: {
+                    cx: 0.5,
+                    cy: 0.3,
+                    r: 0.7
+                },
+                stops: [
+                    [0, color],
+                    [1, Highcharts.color(color).brighten(-0.3).get('rgb')] // darken
+                ]
+            };
+        })
+    });
+
+    // Build the chart
+    Highcharts.chart('container1', {
+        chart: {
+            plotBackgroundColor: null,
+            plotBorderWidth: null,
+            plotShadow: false,
+            type: 'pie'
+        },
+        title: {
+            text: 'Fien categery according to nature of fine , 2022'
+        },
+        /*tooltip: {
+            pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+        },*/
+        accessibility: {
+            point: {
+                valueSuffix: '%'
+            }
+        },
+        plotOptions: {
+            pie: {
+                allowPointSelect: true,
+                cursor: 'pointer',
+                dataLabels: {
+                    enabled: true,
+                    format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                    connectorColor: 'silver'
+                }
+            }
+        },
+        series: [{
+            name: 'fine',
+            data: [{
+                name: 'offence1',
+                y: 614
+            }, {
+                name: 'offence2',
+                y: 1184
+            }, {
+                name: 'offence3',
+                y: 1085
+            }, {
+                name: 'offence4',
+                y: 467
+            }, {
+                name: 'offence6',
+                y: 418
+            }, {
+                name: 'offence7',
+                y: 705
+            }]
+        }]
+    });
+</script>
+
+
+
 
     </div><!-- /.container -->
     <script>
@@ -107,5 +320,7 @@
 
        
     </script>
+
+
 </body>
 </html>
