--- a/search/templates/search/index_view.htm
+++ b/search/templates/search/index_view.htm
@@ -140,7 +140,7 @@
             text: 'Monthly total fine in 2022'
         },
         /*subtitle: {
-            text: 'Source: <a href="http://en.wikipedia.org/wiki/List_of_cities_proper_by_population">Wikipedia</a>'
+            text: 'Source: <a href="http://en.wikipedia.org/wiki/List_of_cities_proper_by_population">Wikipedia</a>'ddd
         },*/
         xAxis: {
             type: 'category',
