--- a/search/templates/search/index_view.htm
+++ b/search/templates/search/index_view.htm
@@ -141,6 +141,7 @@
         },
         /*subtitle: {
             text: 'Source: <a href="http://en.wikipedia.org/wiki/List_of_cities_proper_by_population">Wikipedia</a>'
+            jdjdjdj
         },*/
         xAxis: {
             type: 'category',
